--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 
 a {
     text-decoration: none;
-    color: rgb(13, 237, 192) !important;
+    color: #0dedc0 !important;
     font-weight: 500;
 }
 
